--- a/index.html
+++ b/index.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestão Financeira Pessoal</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestão Financeira</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Gestão Financeira Pessoal</h1>
+  <header>
+    <h1>Gestão Financeira</h1>
+    <audio id="click-sound" src="click.mp3" preload="auto"></audio>
+    <audio id="success-sound" src="success.mp3" preload="auto"></audio>
+  </header>
 
-        <form id="form-financas">
-            <input type="date" id="data" required>
-            <input type="text" id="descricao" placeholder="Descrição" required>
-            <input type="number" step="0.01" id="valor" placeholder="Valor (R$)" required>
-            <select id="tipo">
-                <option value="receita">Receita</option>
-                <option value="despesa">Despesa</option>
-            </select>
-            <button type="submit">Adicionar</button>
-        </form>
+  <main>
+    <section class="form-section">
+      <h2>Cadastro Financeiro</h2>
+      <form id="finance-form">
+        <input type="text" id="descricao" placeholder="Descrição" required>
+        <input type="number" id="valor" placeholder="Valor" step="0.01" required>
+        <select id="tipo">
+          <option value="receita">Receita</option>
+          <option value="despesa">Despesa</option>
+        </select>
+        <input type="date" id="data" required>
+        <button type="submit">Adicionar</button>
+      </form>
+    </section>
 
-        <div class="filtro-mes">
-            <input type="month" id="filtro-mes">
-            <button onclick="filtrarMes()">Filtrar</button>
-            <button onclick="limparFiltro()">Limpar Filtro</button>
-        </div>
+    <section class="table-section">
+      <h2>Balancete Contábil</h2>
+      <table id="tabela-balancete">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Descrição</th>
+            <th>Débito (R$)</th>
+            <th>Crédito (R$)</th>
+            <th>Data</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+        <tfoot>
+          <tr>
+            <th colspan="2">Totais</th>
+            <th id="total-debito">R$ 0,00</th>
+            <th id="total-credito">R$ 0,00</th>
+            <th colspan="2"></th>
+          </tr>
+        </tfoot>
+      </table>
+      <button onclick="exportarPlanilha()">Exportar Planilha</button>
+      <button onclick="imprimirPlanilha()">Imprimir Balancete</button>
+    </section>
+  </main>
 
-        <table id="tabela-financas">
-            <thead>
-                <tr>
-                    <th>Data</th>
-                    <th>Descrição</th>
-                    <th>Tipo</th>
-                    <th>Valor (R$)</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-
-        <div class="balanco">
-            <h2>Balanço Mensal: <span id="balanco-total">R$ 0.00</span></h2>
-        </div>
-
-        <button onclick="window.print()">Imprimir Dados</button>
-
-        <canvas id="grafico-financas"></canvas>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
-
